# string-literal

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  version.cmake
include/experimental/: string_literal
test/: construction.cpp  include_string_literal.cpp  properties.cpp
